--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,8 +32,37 @@
 		  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 		}
 
+		@keyframes fadein {
+	    from { opacity: 0; }
+	    to   { opacity: 1; }
+		}
+
+		/* Firefox < 16 */
+		@-moz-keyframes fadein {
+		    from { opacity: 0; }
+		    to   { opacity: 1; }
+		}
+
+		/* Safari, Chrome and Opera > 12.1 */
+		@-webkit-keyframes fadein {
+		    from { opacity: 0; }
+		    to   { opacity: 1; }
+		}
+
+		/* Internet Explorer */
+		@-ms-keyframes fadein {
+		    from { opacity: 0; }
+		    to   { opacity: 1; }
+		}
+
+		/* Opera < 12.1 */
+		@-o-keyframes fadein {
+		    from { opacity: 0; }
+		    to   { opacity: 1; }
+		}
+
 		.wrapper {
-			overflow-x: hidden;
+			overflow-x: hidden;	
 		}
 
 		.jumbotron {
@@ -49,6 +78,15 @@
 			margin: 0;
 			color: white;
 			background-color: transparent;
+
+			-webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+	       -moz-animation: fadein 2s; /* Firefox < 16 */
+	        -ms-animation: fadein 2s; /* Internet Explorer */
+	        -o-animation: fadein 2s; /* Opera < 12.1 */
+	        animation: fadein 2s;
+	        animation-delay: .3s;
+	        animation-fill-mode: backwards;
+		    animation-timing-function: ease-in;
 		}
 
 		.jumbotron h1 {
