Added Project, Timeline, Counter, and Footer sections :sparkles:

--- a/sass/stylesheet.scss
+++ b/sass/stylesheet.scss
@@ -1,1 +1,6 @@
-// Import Bulma
+// Base overrides broken into section components
+@import 'base';
+@import 'typography';
+@import 'landing';
+@import 'timeline';
+@import 'footer';
