--- a/sass/stylesheet.scss
+++ b/sass/stylesheet.scss
@@ -2,5 +2,8 @@
 @import 'base';
 @import 'typography';
 @import 'landing';
+@import 'about';
+@import 'skills';
+// @import 'message';
 @import 'timeline';
 @import 'footer';
