--- a/sass/timeline.scss
+++ b/sass/timeline.scss
@@ -1,3 +1,5 @@
 .timeline {
-  padding: 0% 1.5% 2% 1.5%;
+  padding: 5% 1.5% 2% 1.5%;
+  color: hsl(0, 0%, 100%);
+  background-color: hsl(0, 0%, 21%);
 }
