--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -5,6 +5,7 @@ body {
 
 h2 {
   font-size: 2rem;
+  font-weight: 100;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.3em;
