--- a/sass/skills.scss
+++ b/sass/skills.scss
@@ -1,3 +1,11 @@
-.skills {
-  padding: 5% 1.5% 5% 1.5%;
+.skills-container {
+  padding: 2% 9% 2% 9%;
+
+  h3 {
+    margin-top: 0.5rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    letter-spacing: 0.25em;
+    text-align: center;
+  }
 }
