--- a/sass/stylesheet.scss
+++ b/sass/stylesheet.scss
@@ -4,6 +4,6 @@
 @import 'landing';
 @import 'about';
 @import 'skills';
-// @import 'message';
+@import 'projects';
 @import 'timeline';
 @import 'footer';
