Increased site responsiveness and minimized JS files

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -7123,9 +7123,13 @@ hr {
 .project-card {
   border-radius: 2%;
   overflow: hidden;
-  box-shadow: 4px 7px 4px rgba(0, 0, 0, 0.3); }
+  box-shadow: 4px 7px 4px rgba(0, 0, 0, 0.3);
+  transition: 0.1s ease-in; }
+  .project-card img {
+    transition: 0.1s all; }
   .project-card:hover {
-    cursor: pointer; }
+    cursor: pointer;
+    transform: scale(1.05); }
 
 .timeline {
   padding: 5% 1.5% 2% 1.5%;
