--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -7055,6 +7055,7 @@ hr {
   position: absolute;
   width: 100%;
   height: 100%;
+  background: #414345;
   background-image: url("/assets/img/landing.jpg");
   background-repeat: no-repeat;
   background-size: cover;
