--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -3,6 +3,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  background: #414345;
   background-image: url('/assets/img/landing.jpg');
   background-repeat: no-repeat;
   background-size: cover;
