--- a/sass/timeline.scss
+++ b/sass/timeline.scss
@@ -2,4 +2,8 @@
   padding: 5% 1.5% 2% 1.5%;
   color: hsl(0, 0%, 100%);
   background-color: hsl(0, 0%, 21%);
+
+  p {
+    color: hsl(0, 0%, 98%);
+  }
 }
