--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -7128,10 +7128,10 @@ hr {
 .project-card {
   border-radius: 2%;
   overflow: hidden;
-  box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
   transition: 0.1s ease-in; }
-  .project-card img {
-    transition: 0.1s all; }
+  .project-card .card-text h3 {
+    text-align: center; }
   .project-card:hover {
     cursor: pointer;
     transform: scale(1.05); }
