--- a/sass/projects.scss
+++ b/sass/projects.scss
@@ -1,11 +1,13 @@
 .project-card {
   border-radius: 2%;
   overflow: hidden;
-  box-shadow: 7px 7px 7px rgba(0.3, 0.3, 0.3, 0.3);
+  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   transition: 0.1s ease-in;
 
-  img {
-    transition: 0.1s all;
+  .card-text {
+    h3 {
+      text-align: center;
+    }
   }
 
   &:hover {
